--- a/projects/addon-mobile/internal/primitive-calendar-mobile/primitive-calendar-mobile.template.html
+++ b/projects/addon-mobile/internal/primitive-calendar-mobile/primitive-calendar-mobile.template.html
@@ -12,6 +12,7 @@
             [class.t-cell_today]="itemIsToday(sheet[rowIndex][colIndex])"
             [class.t-cell_interval]="itemIsInterval(sheet[rowIndex][colIndex])"
             [class.t-cell_disabled]="itemIsDisabled(sheet[rowIndex][colIndex])"
+            [attr.data-tui-element-state]="getItemState(sheet[rowIndex][colIndex])"
             [attr.data-tui-element-range]="getItemRange(sheet[rowIndex][colIndex])"
             (click)="onItemClick(sheet[rowIndex][colIndex])"
         >
